<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".ContentFragment">
    <!--fragment-->

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/backAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:maxLength="250"
                android:padding="20dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="50dp"
                android:paddingEnd="15dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1.5"
                    android:ems="10"
                    android:gravity="center"
                    android:maxLength="250"
                    android:text="@string/exampleTextShort"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="250dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        app:cardCornerRadius="250dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/image" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/mainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/exampleLongText"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/linearLayout21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="50dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="30dp"
                    app:layout_constraintBottom_toTopOf="@+id/Text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <androidx.cardview.widget.CardView
                        android:layout_width="155dp"
                        android:layout_marginEnd="10dp"
                        android:layout_height="155dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="250dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="250dp">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="155dp"
                        android:layout_height="155dp"
                        android:layout_marginEnd="10dp"

                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="250dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="250dp">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="155dp"
                        android:layout_height="155dp"
                        android:layout_marginEnd="10dp"

                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="250dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="250dp">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="155dp"
                        android:layout_height="155dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="250dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cardCornerRadius="250dp">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/image" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </HorizontalScrollView>

            <TextView
                android:id="@+id/contactsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/contacts"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/contactsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="50dp"
                android:paddingEnd="15dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/sym_action_email"
                    app:tint="@color/white"
                    tools:srcCompat="@android:drawable/sym_action_email" />

                <TextView
                    android:id="@+id/emailContactText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1.5"
                    android:ems="10"
                    android:gravity="center"
                    android:maxLength="250"
                    android:singleLine="true"
                    android:text="@string/emailTextExample"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>